# DrWeb-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
app/: __init__.py  auth.py  config.py  models.py  routes.py  utils.py
app/repositories/: file_repository.py
app/services/: file_service.py  filesystem_service.py
migrations/versions/: 23243ec9b94e_initial_migration.py
tests/: test_routes.py
