[tool.poetry]
name = "drweb-test"
version = "0.1.0"
description = ""
authors = ["Ivan Ryabchenko <yosunoro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
